# niftyregpy

./: .gitattributes  .gitignore  .readthedocs.yml  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: pytest.yml
docs/: apps.rst  average.rst  conf.py  core.rst  guide_basic.rst  index.rst  refs.bib  requirements.txt  tools.rst
niftyregpy/: __init__.py
niftyregpy/apps/: apps.py
niftyregpy/average/: average.py
niftyregpy/reg/: __init__.py  reg.py
niftyregpy/tools/: tools.py
niftyregpy/transform/: __init__.py
niftyregpy/utils/: __init__.py  utils.py
src/niftyregpy/: __init__.py
src/niftyregpy/apps/: __init__.py  apps.py  apps_new.py
src/niftyregpy/average/: average.py
src/niftyregpy/reg/: reg.py
src/niftyregpy/tools/: tools.py
src/niftyregpy/transform/: transform.py
src/niftyregpy/utils/: __init__.py  utils.py
tests/: test_apps.py  test_average.py  test_common.py  test_crosscheck_tools.py  test_misc.py  test_reg.py  test_tools.py
tutorial/: tutorial.ipynb
